DOKKWAY-298: Fixed font. Wrapped text sections in p tags. Added fade between media

--- a/Resources/public/templates/sparkle/slides/sparkle/sparkle.css
+++ b/Resources/public/templates/sparkle/slides/sparkle/sparkle.css
@@ -1,9 +1,18 @@
+@font-face {
+  font-family: 'Gibson SemiBold';
+  src: url("/bundles/itkaarhustemplate/templates/dokk1-templates/fonts/gibson/Gibson-SemiBold-webfont.woff") format("woff");
+}
+@font-face {
+  font-family: 'Gibson Regular';
+  src: url("/bundles/itkaarhustemplate/templates/dokk1-templates/fonts/gibson/Gibson-Regular-webfont.woff") format("woff");
+}
+
 .sparkle {
   width: 100%;
   height: 100%;
   background-color: #fff;
   color: #000;
-  font-family: Arial, sans-serif;
+  font-family: 'Gibson Regular', Arial, sans-serif;
 }
 
 .sparkle-wrapper {
@@ -23,6 +32,18 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+}
+
+.sparkle-media-section.fadeout {
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s .2s, opacity .2s ease-in;
+}
+
+.sparkle-media-section.fadein {
+  visibility: visible;
+  opacity: 1;
+  transition: opacity .4s ease-out;
 }
 
 .sparkle-info-section {
@@ -47,12 +68,14 @@
 .sparkle-author {
   font-size: 3em;
   font-weight: bold;
+  font-family: 'Gibson SemiBold', Arial, sans-serif;
 }
 
 .sparkle-date {
   font-size: 2em;
   color: #858585;
   padding-left: 1em;
+  font-family: 'Gibson SemiBold', Arial, sans-serif;
 }
 
 .sparkle .tags {
